# open-pdf-presenter

./: CMakeLists.txt  open-pdf-presenter.pro
archlinux/: PKGBUILD
cmake/modules/: FindPopplerQt5.cmake
src/: parser.cpp  powermanagement.h  presenter.h  renderer.h
